--- a/consul/manifest.json
+++ b/consul/manifest.json
@@ -9,7 +9,7 @@
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
     "description": "Alert on Consul health checks, see service-to-node mappings, and much more.",
-    "title": "Consul Integration",
+    "title": "Consul",
     "media": [],
     "classifier_tags": [
       "Supported OS::Linux",
@@ -17,7 +17,7 @@
       "Supported OS::Windows",
       "Category::Containers",
       "Category::Orchestration",
-      "Category::Configuration Deployment",
+      "Category::Configuration & Deployment",
       "Category::Notification",
       "Category::Log Collection",
       "Category::Autodiscovery"
