--- a/marathon/manifest.json
+++ b/marathon/manifest.json
@@ -9,12 +9,12 @@
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
     "description": "Track application metrics: required memory and disk, instance count, and more.",
-    "title": "Marathon Integration",
+    "title": "Marathon",
     "media": [],
     "classifier_tags": [
       "Supported OS::Linux",
       "Supported OS::macOS",
-      "Category::Configuration Deployment",
+      "Category::Configuration & Deployment",
       "Category::Containers",
       "Category::Log Collection",
       "Category::Autodiscovery"
